<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/operation_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listcard_operation_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/seperator"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/listcard_icon_size"
        android:layout_marginStart="@dimen/listcard_margin_medium"
        android:gravity="end|top"
        android:lineSpacingExtra="2sp"
        android:text="@string/listcard_separator"
        android:textAppearance="@style/listcard_separator"
        android:textColor="@color/listcard_text_color"
        android:translationY="-1.05sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/operation_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <TextView
        android:id="@+id/workorder_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/listcard_margin_medium"
        android:text="@string/listcard_workorder_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/seperator"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
