<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/listcard_padding_large"
        android:paddingTop="@dimen/listcard_padding_medium"
        android:paddingEnd="@dimen/listcard_padding_large"
        android:paddingBottom="@dimen/listcard_padding_medium"
        android:background="@color/listcard_background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/issue_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listcard_issue_id"
                android:textColor="@color/listcard_text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/seperator"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/listcard_icon_size"
                android:layout_marginEnd="@dimen/listcard_padding_small"
                android:gravity="end|top"
                android:lineSpacingExtra="2sp"
                android:text="@string/listcard_separator"
                android:textAppearance="@style/listcard_separator"
                android:textColor="@color/listcard_urgent_color"
                android:translationY="0.85sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/priority_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/priority_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listcard_urgent"
                android:textColor="@color/listcard_urgent_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/breakdown_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listcard_breakdown"
                android:layout_marginEnd="@dimen/listcard_padding_small"
                android:textColor="@color/listcard_urgent_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/seperator"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/breakdown_logo"
                android:layout_width="@dimen/listcard_icon_size"
                android:layout_height="@dimen/listcard_icon_size"
                android:layout_marginEnd="@dimen/listcard_padding_small"
                android:background="@drawable/error_fill"
                android:backgroundTint="@color/listcard_urgent_color"
                android:padding="@dimen/listcard_padding_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/breakdown_text"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/listcard_padding_medium"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="16dp">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title_desc"
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:letterSpacing="0.01"
                    android:fontWeight="500"
                    android:lineSpacingExtra="@dimen/listcard_text_line_spacing"
                    android:text="@string/listcard_equipment_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/listcard_text_size_medium"
                    android:translationY="-2.62sp" />

                <include
                    android:id="@+id/el_fq_info"
                    layout="@layout/listcard_el_fq_info" />

                <include
                    android:id="@+id/group2"
                    layout="@layout/listcard_group2"
                    />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/chat_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/issue_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/chat_media"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/image_qt_text"
                    android:layout_width="20dp"
                    android:layout_height="18dp"
                    android:background="@color/listcard_overlay_color"
                    android:gravity="center"
                    android:text="@string/listcard_image_overlay_text"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="@id/issue_image"
                    app:layout_constraintEnd_toEndOf="@id/issue_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
